cif/org.eclipse.escet.cif.tests/tests/plcgen/prechecker_pure_monitor.cif.iec.err
WARNING: I/O table file "plcgen/prechecker_pure_monitor.csv" not found. The PLC code will not perform any I/O with the environment.
ERROR: CIF PLC code generator failed due to unsatisfied preconditions:

  --------------------------------------------
  (1/1) Event is only used as a monitor event.
  --------------------------------------------
   * In automaton "Mon":
     - controllable mon;
                    ^
